# morphoclip

./: .env.example  .gitignore  .gitmodules  CLAUDE.md  LICENSE  README.md  pyproject.toml
.claude/: CLEANUP-HANDOFF.md  settings.json
.claude/rules/: architecture.md  coding-conventions.md  project-structure.md
baselines/2024_Chandrasekaran_NatureMethods_CPJUMP1/benchmark/: 0.create-experiment-metadata.ipynb  1.0.calculate-map-cp.ipynb  1.1.calculate-map-cp-orf-same.ipynb  1.2.calculate-map-cp-orf-different.ipynb  1.3.rename-output-columns.ipynb  11.analyze-compounds-targeting-brd4.ipynb  12.visualize-brd4.ipynb  2.generate-map-figure.ipynb  4.visualize-similarities.ipynb  5.analyze-polypharmacology.ipynb  6.perform-t-tests.ipynb  7.create-tables.ipynb  8.create-main-umap.ipynb  9.count-datapoints.ipynb  utils.py
baselines/2024_Chandrasekaran_NatureMethods_CPJUMP1/visualization/: 0.visualize_platemap.ipynb  1.visualize_clinical_phase.ipynb
baselines/CellCLIP/: LICENSE.md  README.md  cpjump_matching_eval.py  main.py  requirements.txt  retrieval.py  retrieval_hyperparameter_search.py  retrieval_whole.py  rxrx3-core_efaar_eval.py
baselines/CellCLIP/baselines/: train_baselines.py  train_molphenix.py  train_mpnn.py
baselines/CellCLIP/configs/: data_config.py  ddp_config.yaml  exp.yaml  model_config.py
baselines/CellCLIP/preprocessing/: convert_emb_to_cellclip_emb.py  convert_emb_to_ind_rxrx3core_emb.py  convert_npz_to_avg_emb.py  convert_npz_to_emb_cpjump1.py  convert_npz_to_emb_rxrx3.py  convert_npz_to_phenom1_emb.py  convert_rgb.py  preprocess_images.py  preprocess_images_jumpcp.py  preprocess_images_rxrx3.py  preprocess_molecules.py  preprocess_mpnn_features.py  (+1 more)
baselines/cellprofiler/: 1.0.calculate-map-cp.ipynb  README.md  utils.py
configs/: benchmark.yml  dataset.yml
configs/cellclip/: README.md  base.yaml  cellclip_1024dim.yaml  cellclip_jumpcp.yaml  cellclip_style_base.yaml  official_baseline.yaml  official_batch64.yaml  official_chemberta_film.yaml  official_chemberta_upstreamish_concat_mlp.yaml  official_chemberta_upstreamish_film_keep_cls_augmented.yaml  official_chemberta_upstreamish_film_keep_smiles.yaml  official_chemberta_upstreamish_film_remove_smiles.yaml  official_chemberta_upstreamish_residual_add.yaml  official_low_lr_long_warmup.yaml  official_upstreamish.yaml  official_upstreamish_unique_cpjump_style.yaml
configs/train/: base.yaml  ddp.yaml  mean_pool.yaml
docs/: .env.example  .gitignore  README.md  mdx-components.tsx  morphoclip.conf  next.config.ts  package.json  prettier.config.js  tsconfig.json
docs/_internal/: benchmark-pipeline.md  cellclip_interpolation_experiment.md  cellclip_replicate_changelog.md  plan.md  strategy.md  todo.md
docs/app/: layout.tsx
docs/content/: _meta.ts  glossary.mdx  index.mdx  team.mdx
docs/public/: presentation.html
docs/scripts/: deploy.ts
report/: main.tex  references.bib
report/sections/: conclusion.tex  experiments.tex  introduction.tex  methods.tex  problem_statement.tex  related_work.tex  results.tex
scripts/analysis/: metadata_analysis.py  visualize.py
scripts/benchmark/: benchmark_stable.py  compare_benchmark.py
scripts/cellclip/: analyze_training_run.py  export_cellclip_profiles.py  extract_missing_long.sh  run_cellclip_pipeline.py  run_scheduler.py  train_cellclip.py
scripts/data/: check_plates.py  fetch_dataset.py  inspect_dataset.py  inspect_perturbation.py  label_generator.py
scripts/features/: diagnose_features.py  dino_heatmap_inspection.py  download_features.py  downsampling_inspection.py  extract_features.py  run_pipeline.py  upload_features.py
scripts/sanitycheck/: check_gpu.py  check_setup.py
scripts/text/: inspect_text_embeddings.py  precompute_text_embeddings.py
scripts/training/: eval.py  infer.py  train.py  train_test_split.py
src/benchmark/: __init__.py  copairs_backend.py  data.py  evaluate.py  metrics.py  plot.py  profile_ops.py  split_contexts.py  split_strategies.py  splits.py  stable.py  stable_compound.py  stable_config.py  stable_genetic.py  stable_helpers.py  stable_map.py  stable_results.py
src/cellclip/: __init__.py  scheduler.py  scheduler_io.py  scheduler_planning.py  scheduler_ranking.py  scheduler_report.py  scheduler_spec.py
src/morphoclip/: __init__.py
tests/: conftest.py
tests/benchmark/: test_data.py  test_metrics.py  test_plot.py  test_splits.py  test_stable_config.py  test_stable_helpers.py  test_stable_results.py
tests/cellclip/: conftest.py  test_analysis.py  test_augment.py  test_benchmark_export.py  test_cellclip.py  test_chemberta.py  test_pipeline.py  test_scheduler.py  test_training.py  test_training_config.py  test_training_dataset.py  test_training_model.py
tests/data/: test_dataset.py  test_image_loader.py  test_label_splits.py  test_metadata.py  test_pipeline.py
tests/models/: test_cross_channel_former.py  test_image_encoder.py  test_text_encoder.py
tests/training/: test_batch_correction.py  test_config.py  test_losses.py  test_setup.py
(+149 files in other folders)
